php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29211 SoapClient doesn't request wsdl through proxy
Submitted: 2004-07-16 15:52 UTC Modified: 2004-11-09 09:49 UTC
Votes:6
Avg. Score:4.8 ± 0.4
Reproduced:5 of 5 (100.0%)
Same Version:4 (80.0%)
Same OS:2 (40.0%)
From: mpicker0 at yahoo dot com Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.0.0 OS: Red Hat Linux 7.3
Private report: No CVE-ID: None
 [2004-07-16 15:52 UTC] mpicker0 at yahoo dot com
Description:
------------
When creating a SoapClient object in WSDL mode, PHP attempts to download the WSDL directly from the URL specified, even if a proxy is configured in the second argument.  This is verified by looking at netstat on the machine running PHP, and by monitoring the proxy request log.

If the WSDL is downloaded using some other means and placed in an accessible spot (such as the same directory as the script), and referred to that way, the actual SOAP call is successful.  The SOAP call itself _does_ go through the proxy.

Reproduce code:
---------------
<?php
$client = new SoapClient(
    "http://services.xmethods.net/soap/urn:xmethods-delayed-quotes.wsdl",
    array('proxy_host'    => "mpickering.jax.fnfis.com",
          'proxy_port'    => 8118)
                        );

print($client->getQuote("ibm"));
?>

Expected result:
----------------
The WSDL file listed should be requested through the proxy, then the web service should be called through the proxy.

Actual result:
--------------
Output in web browser and PHP error log:
[16-Jul-2004 09:49:09] PHP Fatal error:  Uncaught SoapFault exception: [WSDL] SOAP-ERROR: Parsing WSDL: Couldn't load from 'http://services.xmethods.net/soap/urn:xmethods-delayed-quotes.wsdl' in /usr/local/apache2/htdocs/soap/client2.php:6
Stack trace:
#0 {main}
  thrown in /usr/local/apache2/htdocs/soap/client2.php on line 6


In addition, netstat run on the PHP machine shows
tcp        0      1 10.48.68.121:1369       64.124.140.30.mfnx:http SYN_SENT

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-08-31 13:27 UTC] julien dot delvat at free dot fr
I get the same error on WinXP 2000 for Google API
 [2004-11-09 09:49 UTC] dmitry@php.net
Fixed in CVS (PHP_5_0 and HEAD).
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 21 19:00:02 2026 UTC