Fixed bug #29211 (SoapClient doesn't request wsdl through proxy). (Rob)